--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@fortawesome/fontawesome-free": "^5.14.0",
         "vue-axios": "^2.1.5",
         "vue-cookies": "^1.7.4",
+        "vue-moment": "^4.1.0",
         "vue-router": "^3.3.4",
         "vue-session": "^1.0.0",
         "vuex": "^3.5.1"
