--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
         "@morioh/v-lightbox": "^1.0.3",
+        "laravel-echo": "^1.9.0",
+        "pusher-js": "^7.0.2",
         "vue-axios": "^2.1.5",
         "vue-cookies": "^1.7.4",
         "vue-moment": "^4.1.0",
