--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19.2",
+        "@mdi/font": "^5.8.55",
+        "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
+        "case-sensitive-paths-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.2",
+        "deepmerge": "^4.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.32.0",
+        "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
@@ -29,10 +32,14 @@
         "laravel-echo": "^1.9.0",
         "pusher-js": "^7.0.2",
         "vue-axios": "^2.1.5",
+        "vue-confirm-dialog": "^1.0.2",
         "vue-cookies": "^1.7.4",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.3.4",
         "vue-session": "^1.0.0",
+        "vue-socialmedia-share": "^1.0.1",
+        "vuetify": "^2.4.0",
+        "vuetify-loader": "^1.6.0",
         "vuex": "^3.5.1"
     }
 }
